--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -19,23 +19,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout full repository with tags
+      # 1️⃣ Checkout repository
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      # 2️⃣ Set version (always bump patch)
+      # 2️⃣ Setup JDK for Maven
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '11'
+          cache: 'maven'
+
+      # 3️⃣ Fetch all tags
+      - name: Fetch all tags
+        run: git fetch --tags
+
+      # 4️⃣ Set Version (pure version, no branch)
       - name: Set Version
         id: set-version
         run: |
-          git fetch --tags
           latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
-          echo "Latest tag: $latest_tag"
-
           IFS='.' read -r major minor patch <<< "${latest_tag#v}"
-
-          # Increment patch until new tag does not exist
           while true; do
             patch=$((patch + 1))
             new_tag="v${major}.${minor}.${patch}"
@@ -43,18 +50,74 @@ jobs:
               break
             fi
           done
-
-          echo "New tag: $new_tag"
+          echo "Calculated new tag: $new_tag"
           echo "new_tag=$new_tag" >> "$GITHUB_OUTPUT"
 
-      # 3️⃣ Configure Git (main branch only)
+      # 5️⃣ Prepare POM version (prepend branch name only once)
+      - name: Prepare POM version
+        id: prepare-pom
+        run: |
+          branch="${GITHUB_REF_NAME}"
+          safe_branch=$(echo "$branch" | tr '/' '-' | tr -cd '[:alnum:]._-')
+
+          version="${{ steps.set-version.outputs.new_tag }}"
+
+          if [ "$safe_branch" = "main" ]; then
+            pom_version="$version"
+          else
+            pom_version="${safe_branch}-$version"
+          fi
+
+          echo "POM version: $pom_version"
+          echo "pom_version=$pom_version" >> "$GITHUB_OUTPUT"
+          echo "docker_tag=$pom_version" >> $GITHUB_ENV
+
+      # 6️⃣ Update pom.xml version (before build)
+      - name: Update pom.xml version
+        run: mvn versions:set -DnewVersion=${{ steps.prepare-pom.outputs.pom_version }} -DgenerateBackupPoms=false
+
+      # 7️⃣ Verify pom.xml version (optional)
+      - name: Verify pom.xml version
+        run: grep "<version>" pom.xml
+
+      # 8️⃣ Build Maven project
+      - name: Build with Maven
+        run: mvn clean install -DskipTests
+
+      # 9️⃣ Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # 🔟 Docker login (main only)
+      - name: Login to Docker Hub
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # 1️⃣1️⃣ Build Docker image
+      - name: Build Docker image
+        run: docker build -t boardgame-temp -f Dockerfile1 .
+
+      # 1️⃣2️⃣ Tag Docker image
+      - name: Tag Docker image
+        run: |
+          docker tag boardgame-temp ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:${{ env.docker_tag }}
+
+      # 1️⃣3️⃣ Push Docker image (main only)
+      - name: Push Docker image
+        if: github.ref == 'refs/heads/main'
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:${{ env.docker_tag }}
+
+      # 1️⃣4️⃣ Configure Git (main only)
       - name: Configure Git user
         if: github.ref == 'refs/heads/main'
         run: |
           git config user.name "Harshavardhana"
           git config user.email "your-email@example.com"
 
-      # 4️⃣ Push Git tag (main only)
+      # 1️⃣5️⃣ Push Git tag (main only)
       - name: Push Git tag
         if: github.ref == 'refs/heads/main'
         env:
@@ -63,7 +126,7 @@ jobs:
           git tag -a "${{ steps.set-version.outputs.new_tag }}" -m "Release ${{ steps.set-version.outputs.new_tag }}"
           git push origin "${{ steps.set-version.outputs.new_tag }}"
 
-      # 5️⃣ Create GitHub release (main only)
+      # 1️⃣6️⃣ Create GitHub Release (main only)
       - name: Create GitHub Release
         if: github.ref == 'refs/heads/main'
         uses: actions/create-release@v1
@@ -74,45 +137,3 @@ jobs:
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # 6️⃣ Setup JDK for Maven
-      - name: Set up JDK 11
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-          cache: 'maven'
-
-      # 7️⃣ Build Maven project
-      - name: Build with Maven
-        run: mvn clean install -DskipTests
-
-      # 8️⃣ Setup Docker Buildx
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      # 9️⃣ Docker login
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      # 🔟 Set Docker tag based on branch
-      - name: Set Docker tag
-        id: docker-tag
-        run: |
-          if [ "${GITHUB_REF##*/}" = "main" ]; then
-            echo "docker_tag=${{ steps.set-version.outputs.new_tag }}" >> $GITHUB_ENV
-          else
-            echo "docker_tag=${GITHUB_REF##*/}" >> $GITHUB_ENV
-          fi  
-
-      # 1️⃣1️⃣ Build and push Docker image
-      - name: Build and Push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: Dockerfile1
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:${{ env.docker_tag }}
