--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -52,6 +52,7 @@ jobs:
           done
           echo "Calculated new tag: $new_tag"
           echo "new_tag=$new_tag" >> "$GITHUB_OUTPUT"
+
       # 5️⃣ Prepare POM version (prepend branch name only once)
       - name: Prepare POM version
         id: prepare-pom
@@ -67,11 +68,12 @@ jobs:
           echo "POM version: $pom_version"
           echo "pom_version=$pom_version" >> "$GITHUB_OUTPUT"
           echo "docker_tag=$pom_version" >> $GITHUB_ENV
-      # 6️⃣ Update pom.xml version (before build)
+
+      # 6️⃣ Update pom.xml version
       - name: Update pom.xml version
         run: mvn versions:set -DnewVersion=${{ steps.prepare-pom.outputs.pom_version }} -DgenerateBackupPoms=false
 
-      # 7️⃣ Verify pom.xml version (optional)
+      # 7️⃣ Verify pom.xml version
       - name: Verify pom.xml version
         run: grep "<version>" pom.xml
 
@@ -91,26 +93,26 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 1️⃣1️⃣ Build Docker image
-      - name: Build Docker image
-        run: docker build -t boardgame-temp -f Dockerfile1 .
+      # 1️⃣1️⃣ Build & Push Docker image using docker/build-push-action
+      - name: Build and Push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: Dockerfile1
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:${{ env.docker_tag }}
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:cache
+          cache-to: type=inline
 
-      # 1️⃣2️⃣ Tag Docker image
-      - name: Tag Docker image
-        run: |
-          docker tag boardgame-temp ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:${{ env.docker_tag }}
-      # 1️⃣3️⃣ Push Docker image (main only)
-      - name: Push Docker image
-        if: github.ref == 'refs/heads/main'
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:${{ env.docker_tag }}
-
-      # 1️⃣4️⃣ Configure Git (main only)
+      # 1️⃣2️⃣ Configure Git (main only)
       - name: Configure Git user
         if: github.ref == 'refs/heads/main'
         run: |
           git config user.name "Harshavardhana"
           git config user.email "your-email@example.com"
-      # 1️⃣5️⃣ Push Git tag (main only)
+
+      # 1️⃣3️⃣ Push Git tag (main only)
       - name: Push Git tag
         if: github.ref == 'refs/heads/main'
         env:
@@ -118,7 +120,8 @@ jobs:
         run: |
           git tag -a "${{ steps.set-version.outputs.new_tag }}" -m "Release ${{ steps.set-version.outputs.new_tag }}"
           git push origin "${{ steps.set-version.outputs.new_tag }}"
-      # 1️⃣6️⃣ Create GitHub Release (main only)
+
+      # 1️⃣4️⃣ Create GitHub Release (main only)
       - name: Create GitHub Release
         if: github.ref == 'refs/heads/main'
         uses: actions/create-release@v1
